# unified-intelligence

./: .env.example  .gitignore  .ui_token  20250723_uiimprovements.md  20250809-FIXME.md  20250809-ui_context-tool.md  20250810_ui-remember.md  20250816-codex-framework-refactor.md  20250818-codex-refactortalk.md  20250818-gemini.md  20250818-grok.md  AGENTS.md  CHANGELOG.md  Cargo.toml  FIXME.md  FUTUREFIXES.md  README.md  REMOTEINSTRUCTIONS.md  RESILIENT_STARTUP.md  WARP.md  config.yaml  instructions.md  recall_interactive.py  recall_thought.py  recall_thought_simple.py  sqlite-uniforms-plan.md  surreal-refactor.md  test_duplicate_thoughts.py  test_recall_minimal.py  test_think_and_recall.sh  test_ui_recall.sh
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: security.yml
.grok/: settings.json
.stfolder/: syncthing-folder-537c7f.txt
clean-up/: REFACTORING_COMPLETION_SUMMARY.md  backup_qdrant.py  clean_handlers.py  clean_handlers_correct.py  clean_models.py  clean_service.py  handlers.rs.backup  mod.rs.bak  remove_handlers.py  remove_handlers_v2.py  track-phase1.md  track-phase2.md  track-phase3.md
docs/: redis_schema.md  ui_remember.md  ui_remember_config.md
examples/: hash_expiration_demo.rs
scripts/: consolidate_chains.py  ui_mcp.sh
src/: circuit_breaker.rs  config.rs  embeddings.rs  error.rs  frameworks.rs  identity_documents.rs  intent.rs  lib.rs  lua_scripts.rs  main.rs  models.rs  qdrant_service.rs  rate_limit.rs  redis.rs  redis_abstraction.rs  repository.rs  repository_traits.rs  retry.rs  search_enhancements.rs  search_optimization.rs  service.rs  synth.rs  transport.rs  validation.rs  visual.rs
src/handlers/: help.rs  identity.rs  knowledge.rs  mod.rs  recall.rs  sam.rs  search.rs  test_handlers.rs  thoughts.rs
src/tools/: mod.rs  ui_context.rs  ui_memory.rs  ui_remember.rs  ui_start.rs
test-scripts/: test_duplicate_simple.py
tests/: README_FALLBACK_SEARCH_TESTS.md  fallback_search_tests.rs
