[package]
name = "unified-intelligence"
version = "2.0.0"
edition = "2024"
description = "A Model Context Protocol (MCP) using rmcp 0.3.0 for LLMs to "
authors = ["8agana sam.atagana@gmail.com"]
license = "MIT"
repository = "https://github.com/8agana/unified-intelligence"

[dependencies]
rmcp = { version = "0.5.0", features = ["transport-io", "transport-streamable-http-server", "transport-worker", "macros"] }
rmcp-macros = "0.5.0"
schemars = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
redis = { version = "0.32.5", features = ["tokio-comp", "json"] }
deadpool = "0.12"
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1"] }
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
colored = "2.0"

# HTTP server for remote MCP
axum = { version = "0.7" }
hyper = { version = "1", features = ["server"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
tower = "0.5"

# HTTP client for Groq API
reqwest = { version = "0.12.23", features = ["json"] }
async-openai = { version = "0.29.0" }

# Circuit breaker and retry dependencies
tokio-retry = "0.3"

# Search enhancement dependencies
fuzzy-matcher = "0.3"
# metaphone = "0.1" # Requires nightly features, skip for now

# Additional utilities
backoff = "0.4"
rand = "0.8"
dotenvy = "0.15"
bytemuck = "1.23.2"
# pyo3 = { version = "0.21", features = ["auto-initialize", "extension-module"] }
# pythonize = "0.21"

# [build-dependencies]
# pyo3-build-config = { version = "0.21", features = ["resolve-config"] }

[dev-dependencies]
mockall = "0.12"
